# treibstoff

./: .gitignore  .npmignore  .readthedocs.yaml  CHANGES.rst  LICENSE.rst  MANIFEST.in  Makefile  README.rst  TODO.rst  biome.json  build_docs.sh  docs.sh  include.mk  karma.conf.js  karma.sh  mx.ini  pack.sh  package-lock.json  package.json  pyproject.toml  rollup.conf.js  rollup.sh  setup.py  watch.sh  web-test-runner-config.mjs  wheel.sh  wtr.config.mjs
.ai/: README.md  build-forms.md  create-widget.md  drag-and-drop.md  event-handling.md  http-requests.md  motion-tracking.md  overlays-dialogs.md  overview.md  property-binding.md  ssr-integration.md  ssr-programmatic.md  svg-graphics.md  template-parsing.md  testing.md  websocket-realtime.md
.github/workflows/: test.yaml  test.yml
docs/source/: ajax.rst  architecture.rst  clock.rst  conf.py  development.rst  dnd.rst  events.rst  form.rst  getting_started.rst  index.rst  keystate.rst  listener.rst  motion.rst  overlay.rst  parser.rst  properties.rst  request.rst  spinner.rst  svg.rst  utils.rst  websocket.rst  widget.rst
docs/source/_static/: custom.css
scripts/: clean.sh  docs.sh  install.sh  pack.sh  watch.sh  wheel.sh
src/: ajax.js  ajaxdestroy.js  bootstrap.js  bundle.js  clock.js  dnd.js  events.js  form.js  keystate.js  listener.js  motion.js  overlay.js  parser.js  properties.js  request.js  spinner.js  treibstoff.js  utils.js  websocket.js  widget.js
src/ssr/: action.js  ajax.js  destroy.js  dispatcher.js  event.js  form.js  handle.js  overlay.js  parser.js  path.js  util.js
tests/: test_ajax.js  test_ajaxdestroy.js  test_bootstrap.js  test_clock.js  test_dnd.js  test_events.js  test_form.js  test_keystate.js  test_listener.js  test_motion.js  test_overlay.js  test_parser.js  test_properties.js  test_request.js  test_spinner.js  test_treibstoff.js  test_utils.js  test_websocket.js  test_widget.js
treibstoff/: __init__.py  treibstoff.bundle.js  treibstoff.bundle.js.map  treibstoff.bundle.min.js  treibstoff.bundle.min.js.map
treibstoff/bundle/: treibstoff.bundle.js  treibstoff.bundle.js.map  treibstoff.bundle.min.js  treibstoff.bundle.min.js.map  treibstoff.css
treibstoff/static/: treibstoff.bundle.js  treibstoff.bundle.js.map  treibstoff.bundle.min.js  treibstoff.bundle.min.js.map  treibstoff.css
